Add dto classes to display information for categories and questions, make service and controller methods to get by id, get all, delete and create elements