@@ -1,6 +1,7 @@
 package com.quizapp.questions.service;
 
 import com.quizapp.questions.model.dto.AddQuestionDTO;
+import com.quizapp.questions.model.dto.QuestionDTO;
 import com.quizapp.questions.model.entity.Category;
 import com.quizapp.questions.model.entity.Question;
 import com.quizapp.questions.repository.QuestionRepository;
@@ -13,6 +14,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,10 +25,34 @@ public class QuestionServiceImpl implements QuestionService {
     private final CategoryService categoryService;
 
     @Override
+    public List<QuestionDTO> getAllQuestions() {
+        return this.questionRepository.findAll()
+                .stream()
+                .map(this::questionToDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public QuestionDTO getQuestionById(Long id) {
+        return this.questionRepository.findById(id)
+                .map(this::questionToDTO)
+                .orElse(null);
+    }
+
+    private QuestionDTO questionToDTO(Question question) {
+        return QuestionDTO.builder()
+                .id(question.getId())
+                .questionText(question.getQuestionText())
+                .correctAnswer(question.getCorrectAnswer())
+                .options(question.getOptions())
+                .build();
+    }
+
+    @Override
     public Question addQuestion(AddQuestionDTO addQuestionDTO) {
 
         if (addQuestionDTO == null) {
-            return null;
+            throw new RuntimeException("Не е намерен въпрос!");
         }
 
         Optional<Category> optionalCategory = this.categoryService
@@ -36,13 +62,11 @@ public class QuestionServiceImpl implements QuestionService {
             return null;
         }
 
-        List<String> options = this.parseOptions(addQuestionDTO.getOptions());
-
         Question question = Question.builder()
                 .questionText(addQuestionDTO.getQuestionText())
                 .correctAnswer(addQuestionDTO.getCorrectAnswer())
                 .category(optionalCategory.get())
-                .options(options)
+                .options(this.parseOptions(addQuestionDTO.getOptions()))
                 .build();
 
         return this.questionRepository.saveAndFlush(question);
@@ -53,11 +77,19 @@ public class QuestionServiceImpl implements QuestionService {
             return new ArrayList<>();
         }
 
-        return new ArrayList<>(
-                Arrays.stream(options.split(","))
-                        .map(String::trim)
-                        .filter(opt -> !opt.isEmpty())
-                        .toList()
-        );
+        return Arrays.stream(options.split("\\s*,\\s*"))
+                .map(String::trim)
+                .filter(opt -> !opt.isEmpty())
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public boolean deleteQuestionById(Long id) {
+        if (!this.questionRepository.existsById(id)) {
+            return false;
+        }
+
+        this.questionRepository.deleteById(id);
+        return true;
     }
 }
